# oomwoo-ros2-tools

./: .gitignore  HANDOVER.md  QUICKSTART.md  README.md
.github/workflows/: deps.yml
deploy/: Dockerfile  _diag_livingroom.sh  _get_pkgs.sh  _vm_run.sh  diag_livingroom.launch.py  run_coverage_livingroom.sh  run_coverage_regression.sh  run_reloc_regression.sh  smoke_test.sh
deploy/pi_runtime/: README.md  filter_bag.py  install_oomwoo_m1_runtime.sh  install_oomwoo_runtime_jazzy.sh  measure_baseline.py  measure_pi_baseline.sh  oomwoo_runtime.launch.py
deploy/results/: PROVENANCE.md  coverage_livingroom.json  coverage_testroom_bcd.json  coverage_testroom_v3.json  denominators.txt
docs/: reactive-row-executor.md
docs/etc/: PR_cleaning-jobs_README.md  PR_nav-localize_README.md  README.md
src/oomwoo_sim_support/: package.xml  setup.cfg  setup.py
src/oomwoo_sim_support/config/: gz_truth_bridge.yaml  nav2_params.yaml
src/oomwoo_sim_support/launch/: coverage_regression.launch.py  relocalize_regression.launch.py  sim_bringup.launch.py
src/oomwoo_sim_support/maps/: living_room.pgm  living_room.yaml  test_room.pgm  test_room.yaml
src/oomwoo_sim_support/oomwoo_sim_support/: coverage_meter_node.py  coverage_regression_runner.py  ground_truth_node.py  initialpose_pub_node.py  kidnap_injector_node.py  reloc_regression_runner.py
src/oomwoo_sim_support/test/: test_meter_geometry.py  test_revisit_metric.py
src/oomwoo_sim_support/worlds/: test_room.world
tools/: build_map.launch.py  capture_bench.py  check_rosdeps.py  compute_denominator.py  gap_probe.py  gen_livingroom_map.py  gen_map.py  offline_match.py  render_coverage_video.py  wanderer.py
(+27 files in other folders)
